# c3i

./: .devenv.flake.nix  .gitignore  .mcp.json  AGENTS.md  AGENT_BOOTSTRAP.md  C3I_MSTS_900_IMPROVEMENTS.md  C3I_MSTS_RUST_GENERATED_900.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  MSTS_FMEA_STAMP_450_IMPROVEMENTS.md  PROJECT_TODOLIST.md  c3i_kpi_dashboard.sh  cepaf-planning-expert.skill  cepaf-zenoh-expert.skill  config  devenv.nix  devenv.yaml  e2e_ui_tester.py  generate_ui.py  package-lock.json  package.json  picked_files.txt  playwright.config.js  run_tui.py  sa-auto-lifeline  sa-budget  sa-embed-backfill  sa-gleam  sa-gleam-start  sa-gleam-stop  sa-gleam-verify  sa-model-router  sa-openrouter-sync  sa-plan  sa-serve  sa-sync  sa-up  sa-zk-metrics  sa-zk-ooda-snapshot  (+4 more)
intelitor-v5.2/: .aee_tracking_state.json  .envrc  .git_integration_metadata.json  .iex.exs  .mcp.json  .project_complete.json  .project_completion_metadata.json  .smriti_progress.json  .ssl_config  AGENT_BOOTSTRAP.md  ALL_CLAUDE_RULES.txt  ANALYSIS_FINDINGS.md  BACKOFF_PROPERTY_ANALYSIS.md  CLAUDE-NEW.md  CLAUDE-SHORT.md  CLAUDE.md  CLAUDE.md.docker-backup-1757765754  CLAUDE_LOGGING_MANDATORY_RULE.md  CONTAINER_POLICY.md  Cargo.toml  Containerfile.nixos  Dockerfile.cepaf-bridge  Dockerfile.db  Dockerfile.kms-catalog  Dockerfile.sil4-app  Dockerfile.sil4-db  Dockerfile.sil4-obs  ENTERPRISE_FEATURES_COMPLETION.md  FINAL_BIOMORPHIC_INTEGRITY_REPORT.md  FINAL_SINGULARITY_REPORT.md  GA_DEPLOYMENT_GUIDE.md  GEMINI-FAST-2000.md  GEMINI-FAST-20k.md  GEMINI-FAST.md  GEMINI-math.md  GEMINI-math.md.backup_20251217_212641  GEMINI-text.md  GEMINI.md  GEMINI_FULL.txt  IMMUNE_SYSTEM_QUICK_REFERENCE.md  (+99 more)
intelitor-v5.2/.claude/: settings.json
intelitor-v5.2/.claude/agents/: constitutional-verifier.md  cpu-governor-supervisor.md  fmea-analyzer.md  holon-analyzer.md  observability-analyzer.md  prajna-operator.md  wallaby-coverage-engineer.md
intelitor-v5.2/.claude/commands/: cepaf-test.md  checkpoint.md  database.md  datadog.md  evolution.md  federation.md  fmea.md  formal-verify.md  guardian.md  holon.md  hyperscaler.md  immune.md  plan.md  prajna.md  prometheus.md  registry.md  robustness.md  sil4.md  sil6.md  stamp.md  swarm-verify.md  wallaby-coverage.md
intelitor-v5.2/.claude/rules/: constraint-sync-mandatory.md  five-level-testing.md  (+5 more)
intelitor-v5.2/assets/: package-lock.json  package.json  tailwind.config.js
intelitor-v5.2/backups/: 20251217-1726-CLAUDE-math.md.backup  run_phoenix_devenv.sh.backup  start_phoenix_container.sh.backup
intelitor-v5.2/benchmarks/: stamp_tdg_gde_bench.exs
intelitor-v5.2/config/: config.exs  dev_fast.exs  dev_ultra_fast.exs  helpers.exs  otel-config-fractal.yaml  prod.exs  ssl_container.exs  stamp_tdg_gde_monitoring.exs  test.exs  test_core.exs  ultra_fast.exs  wallaby.exs
intelitor-v5.2/containers/: Containerfile.app  Containerfile.app.docker-backup-1757765754  Containerfile.grafana.docker-backup-1757765754  Containerfile.nginx  Containerfile.prometheus  Containerfile.prometheus.docker-backup-1757765754  Containerfile.redis.docker-backup-1757765754  default.nix.docker-backup-1757765754  result-2  result-5  sopv51-base.nix
intelitor-v5.2/docs/: .~lock.nomenclature-recommended.xlsx#  Nomenclature.csv  OPERATING_INSTRUCTIONS_SIL6.md  STATE_RECREATION_INSTRUCTIONS.md  container-architecture.md  ga_validation_checklist_sopv51.md  nomenclature-feedback.md
intelitor-v5.2/ga_release/: ga_validation_report_1754230444.json
intelitor-v5.2/lib/: alarm_processor.ex  audit_logger.ex  cache_manager.ex  escalation_engine.ex  execution_engine.ex  federated_schema.ex  indrajaal_web.ex  message_queue.ex  repo.ex  schema_composer.ex  schema_registry.ex  stream_analytics.ex  subscription_manager.ex  workflow_engine.ex
intelitor-v5.2/livebooks/: prometheus_dashboard.livemd
intelitor-v5.2/mesh-resurrection/: SKILL.md
intelitor-v5.2/notebooks/: neuro_symbolic_monitor.livemd
intelitor-v5.2/quint/: AgentStateMachine.qnt  IndrajaalTypes.qnt  STAMPConstraints.qnt
intelitor-v5.2/rel/: env.sh.eex  vm.args.eex
intelitor-v5.2/scripts/: ALARM_DEMO_SOLUTIONS.md  ash_implementation_tracker.exs  batch_upgrade_scriban_2.exs  batch_upgrade_scriban_3.exs  benchmark_compare.exs  cleanup_misplaced_atomic.exs  cockpitf.dart  compilation_performance_fix.exs  comprehensive_build.exs  demo_alarm_execution.exs  emergency_compilation_fix.exs  enhanced_alarm_demo_with_tests.exs  enhanced_alarm_execution_demo_original.exs  enhanced_alarm_execution_demo_original_fixed.exs  enhanced_alarm_execution_demo_with_warnings.exs  fast_compile.exs  fix_ash_allow_nil_syntax.exs  fix_ash_atomic_warnings.exs  fix_double_underscores.exs  fix_final_atomic_warnings.exs  fix_regex_deprecation_warnings.exs  fix_unused_variables.exs  phase3_direct_warning_elimination.exs  quick_compile_fix.exs  setup_aee_sopv511_environment.exs  smriti_dashboard.exs  test_validation_comprehensive.exs  tps_enhanced_workflow.sh.backup  ultimate_warning_elimination_engine_phase3.exs  update_todo_status.exs
intelitor-v5.2/test/: credo_warning_fixes_test.exs  feature_flags_test.exs  sopv511_observability_compliance_test.exs  test_helper.exs
lib/rust/: Cargo.toml
sub-projects/ferriskey/: Cargo.toml
sub-projects/intelitor-v5.2/: .container_build_state  .containerignore  .credo.exs  .devenv.flake.nix  .dialyzer_ignore.exs  .env.example  .env.standalone.template  .geminiignore  .gitignore  .mcp.json  .nixignore  .ripgreprc  .sobelow-conf  AGENTS.md  AGENT_BOOTSTRAP.md  ARTIFACT_INDEX.md  BACKOFF_RECOMMENDED_ADDITIONS.exs  BACKOFF_TEST_SUMMARY.txt  CLAUDE-20251207.md  CLAUDE-MASTER.md  CLAUDE-SHORT.md.backup_20251122-1711  CLAUDE-STATEMC.md  CLAUDE-descriptive.md  CLAUDE-math.md  CLAUDE-text.md  CLAUDE.md  CLAUDE_FULL.txt  CLAUDE_LOGGING_MANDATORY_RULE_ENFORCEMENT.md  COMPREHENSIVE_TEST_COVERAGE_REPORT.md  CONTAINER_POLICY.md.docker-backup-1757765754  CONTRIBUTING.md  CURRENT_STATUS_UPDATE.md  Cargo.toml  Dockerfile.cortex  Dockerfile.fix  Dockerfile.mojo  Dockerfile.observability  Dockerfile.sopv51-app  Dockerfile.sopv51-app-hardened  Dockerfile.sopv51-base  (+124 more)
(+14107 files in other folders)
