[workspace]
resolver = "2"
members = [
    "c3i_common",
    "c3i_swarm_generator",
    "c3i_browser_regression",
    "c3i_agui_ideas",
]

[workspace.dependencies]
zenoh = { version = "1.2", default-features = false, features = ["transport_tcp", "transport_udp"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "unwind"
