[workspace]
resolver = "2"

members = ["lib/indrajaal_ark", "native/lineage_auth", "native/zenoh_nif", "native/zenoh_ffi", "native/math_engine", "native/timestamp_daemon", "native/ignition_daemon", "native/zenoh_router_plugin"]

# Workspace-wide profile settings (moved from member crates per Cargo warning)
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "unwind" # SC-NIF-003: Rust NIFs SHALL NEVER use panic="abort"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind" # SC-NIF-003: Rust NIFs SHALL NEVER use panic="abort"
