[package]
name = "c3i_agui_ideas"
version = "0.1.0"
edition = "2021"
description = "Generates 200 AG-UI/A2A feature ideas with multi-dimensional scoring"

[dependencies]
c3i_common = { path = "../c3i_common" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
