[package]
name = "c3i_browser_regression"
version = "0.1.0"
edition = "2021"
description = "SIL-6 Browser Regression TUI — tests all C3I web pages with live Ratatui dashboard"

[dependencies]
c3i_common = { path = "../c3i_common" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ratatui = "0.29"
crossterm = "0.28"
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
