[package]
name = "c3i_common"
version = "0.1.0"
edition = "2021"
description = "Shared library for C3I Rust tools — ZMOF publishing, fractal namespace, Allium rules, telemetry"

[dependencies]
zenoh = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
