[package]
name = "c3i_browser_regression"
version = "0.1.0"
edition = "2021"
description = "SIL-6 Browser Regression TUI — tests all c3i web pages with live Ratatui dashboard"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
