[package]
name = "indrajaal_ark"
version = "0.1.0"
edition = "2021"
authors = ["Indrajaal Cybernetic Architect <ark@indrajaal.ai>"]
description = "Deep Native Archive (DNA) - SIL-6 Biomorphic Self-Repairing Storage"
license = "MIT"

[dependencies]
# CLI Argument Parsing
clap = { version = "4.4", features = ["derive"] }

# The Math (Level 2: Algorithmic Core)
reed-solomon-erasure = "6.0"

# The Integrity (Level 2: Algorithmic Core)
blake3 = { version = "1.5", features = ["mmap", "rayon"] }

# The Compression
zstd = "0.13"

# Archive Format
tar = "0.4"

# I/O & Error Handling
anyhow = "1.0"
thiserror = "1.0"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
indicatif = "0.17" # Progress bars for the "Lytic Cycle" visualization

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
