[package]
name = "c3i_nif"
version = "0.1.0"
edition = "2021"
authors = ["Indrajaal Team"]
description = "Unified C3I NIF — planning, system health, knowledge, verification for BEAM/Gleam MCP"

[lib]
name = "c3i_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
