[package]
name = "graphene_nif"
version = "0.2.0"
edition = "2021"
description = "Graphite+Graphene+Skia unified NIF — graph theory + vector graphics + rasterization for BEAM/Gleam"

[lib]
name = "graphene_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
# Skia — pure Rust CPU rasterizer (shapes, paths, anti-aliased PNG output)
tiny-skia = "0.12"
# Graphene — graph theory library (adjacency lists, BFS, DFS, SCC, Dijkstra)
graphene = "0.1.5"
# Kurbo — 2D vector path geometry (from Graphite's dependency tree)
kurbo = "0.11"
# Glam — accessed via bevy_math re-export
# glam accessed via bevy_math
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Bevy Engine (selective crates — stable release, no GPU/window deps)
bevy_ecs = { version = "0.15", default-features = false }
bevy_math = { version = "0.15", default-features = false }
bevy_color = { version = "0.15", default-features = false }
once_cell = "1"
# Mermaid — pure Rust Mermaid diagram renderer (flowchart, sequence, state, etc.)
mermaid-rs-renderer = "0.2"

# Vega-Lite — declarative visualization grammar (typed spec builder)
vega_lite_4 = "0.9"

# Petgraph — production graph library (adjacency list/matrix, algos, dot export)
petgraph = "0.8"
# Grafana — JSON spec builder (no crate needed, just serde_json)

# NOTE: Full Graphite Editor at native/graphite-editor/ (reference)
# NOTE: Full Bevy Engine at native/bevy-engine/ (reference, 58 crates)

[[bin]]
name = "graphene-render"
path = "src/bin.rs"
