[package]
name = "indrajaal_ark"
version = "0.1.0"
edition = "2021"
authors = ["Gemini (Cybernetic Architect)"]
description = "Indrajaal.Ark: Deep Native Archive & Biomorphic Seed"

[dependencies]
reed-solomon-erasure = "6.0"
zstd = "0.13"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[lib]
name = "indrajaal_ark"
path = "src/lib.rs"

[[bin]]
name = "ark"
path = "src/main.rs"
