[package]
name = "timestamp_sync_mcp"
version = "0.1.0"
edition = "2021"
authors = ["Indrajaal Team"]
description = "MCP server for Timestamp Sync"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
