[package]
name = "ignition_daemon"
version = "0.1.0"
edition = "2021"
authors = ["Indrajaal Team"]
description = "SIL-6 Biomorphic Mesh Ignition Daemon — Pre-flight, Boot, Verify"
license = "Apache-2.0"

[[bin]]
name = "ignition"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "fs", "macros", "signal", "process", "net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
tui-logger = { version = "0.13", features = ["tracing-support"] }
# W1: NIF validation (ELF binary inspection) + substrate guard
goblin = "0.8"
libc = "0.2"
# W2: Build oracle (reads F# BuildHistory.db via SQLite WAL)
rusqlite = { version = "0.31", features = ["bundled"] }
petgraph = "0.6"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"

[dev-dependencies]
# substrate_guard tests use tempfile for isolated filesystem fixtures
tempfile = "3.10"
