[package]
name = "math_engine"
version = "0.1.0"
authors = ["Gemini (Cybernetic Architect)"]
edition = "2021"

[lib]
name = "math_engine"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
ndarray = "0.15"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
