[package]
name = "timestamp_daemon"
version = "0.1.0"
edition = "2021"
authors = ["Indrajaal Team"]
description = "Indrajaal Timestamp Sync Daemon - Ensures system timestamps don't drift"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "fs", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
