[package]
name = "zenoh_ffi"
version = "0.1.0"
edition = "2021"
authors = ["Indrajaal Team"]
description = "Zenoh FFI bindings for F#/.NET - narrow waist C ABI over zenoh 1.7"
license = "Apache-2.0"

# STAMP Constraints:
# - SC-ZENOH-FFI-001: C ABI functions must not panic (catch_unwind)
# - SC-ZENOH-FFI-002: All handles must be explicitly freed
# - SC-ZENOH-FFI-003: JSON serialization for cross-FFI messages
# - SC-ZTEST-003: Publish latency < 10ms

[lib]
name = "zenoh_ffi"
crate-type = ["cdylib"]

[dependencies]
# Zenoh native client - MUST match NIF crate version for wire compatibility
zenoh = { version = "1.7", default-features = false, features = ["transport_tcp", "transport_udp"] }

# Async runtime (Zenoh requires tokio)
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time"] }

# JSON serialization for messages across FFI boundary
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Structured tracing with span instrumentation (replaces log+env_logger)
# SC-OBS-071: 4 OTEL modules across all runtimes
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Legacy logging (log facade still used by zenoh internals)
log = "0.4"
env_logger = "0.10"

[build-dependencies]
csbindgen = "1.9"

# [profile.release] defined in workspace root Cargo.toml
