[package]
name = "zenoh_router_plugin"
version = "0.1.0"
edition = "2021"
description = "Zenoh Router Plugin — Wire-Level ProofToken Enforcement for Indrajaal SIL-6 Mesh"
# SC-NIF-005: ProofToken enforcement at wire level
# SC-SWARM-VERIFY-054: Zenoh backbone protection
# Task: 9c4452d5 P1-HARDENING

[lib]
name = "zenoh_plugin_proof_token"
crate-type = ["cdylib"]

[dependencies]
# Zenoh plugin SDK — MUST match router version exactly
zenoh = { version = "1.7", features = ["internal", "plugins", "unstable"] }
zenoh-plugin-trait = "1.7"

# Async runtime — required for Zenoh plugin lifecycle
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time"] }

# Zenoh result types — needed for Plugin trait
zenoh-result = "1.7"

# Cryptography — MUST match zenoh_nif for wire compatibility
hmac = "0.12"
sha2 = "0.10"

# Serialization — JSON payload parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency — fast RwLock for session cache
parking_lot = "0.12"

# Logging/tracing — standard Zenoh plugin pattern
tracing = "0.1"

[dev-dependencies]
# Integration tests
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }
