[package]
name = "indrajaal-env-checker"
version = "0.1.0"
edition = "2021"
authors = ["Indrajaal Team"]
description = "Indrajaal ELIXIR_ERL_OPTIONS configuration validator with UTF-8 compliance checking"
license = "MIT"

[workspace]

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
walkdir = "2.4"
regex = "1.10"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
